examples/test/testpolicy3669.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3669
  namespace: namespace365
spec:
  podSelector:
    matchLabels:
      key1: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value29
          key32: value18
      podSelector:
        matchLabels:
          key34: value6
          key25: value43
